# pkgdb

./: .clang-format  .clang-tidy  .gitignore  CONTRIBUTING.md  CONTRIBUTING.org  Doxyfile  Makefile  Makefile.bak  README.md  bootstrap.sh  config.mk.in  configure.ac  default.nix  flake.nix  pkg-fun.nix
build-aux/: changed-sources  clang-tidy-to-json  fixup-headers.sh  iwyu  iwyu-mappings.json  iwyu-to-json
docs/: annotated.html  classes.html  classflox_1_1FlakePackage-members.html  classflox_1_1FlakePackage.html  classflox_1_1FloxException-members.html  classflox_1_1FloxException.html  classflox_1_1FloxFlake-members.html  classflox_1_1FloxFlake.html  classflox_1_1Package-members.html  classflox_1_1Package.html  classflox_1_1pkgdb_1_1PkgDb-members.html  classflox_1_1pkgdb_1_1PkgDb.html  dir_25b94c3afce00ed38231227d8141f932.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ec8c3a778c7f6d1e20970f9a5a2b005e.html  doxygen.css  exceptions_8hh_source.html  files.html  flake-package_8hh_source.html  flox-flake_8hh_source.html  friends.cc  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  input_8hh_source.html  main_8cc.html  namespaceflox_1_1pkgdb.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceversions.html  package-sets_8hh_source.html  package_8hh.html  package_8hh_source.html  packages_8hh_source.html  params-to-sql.md  pkg-db_8cc.html  (+15 more)
include/: date.hh  pkg-db.hh  pkgdb.hh  semver.hh  versions.hh
src/: cached-package-set.cc  command.cc  date.cc  eval.cc  exceptions.cc  flake-package-set.cc  flake-package.cc  flox-flake.cc  get.cc  inputs.cc  logger.cc  main.cc  nix-state.cc  pkg-db.cc  pkgdb.cc  raw-package.cc  registry.cc  repl.cc  resolver-state.cc  scrape.cc  semver.cc  tomlToJSON.cc  util.cc  versions.cc  yamlToJSON.cc
tests/: .gitignore  cli.bats  descriptor.bats  environment.cc  exceptions.cc  ga-registry.bats  (+26 more)
(+138 files in other folders)
